--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>
+        <%= title %>
+    </title>
 </head>
 <body>
-    <h1>namaskar</h1>
+    <h1>home page</h1>
+
+    <a href="/users/profile">Profile</a>
+    <a href="/users/sign_in">Sign In</a>
+    <a href="/users/sign_up">Sign Up</a>
 </body>
 </html>
