--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -7,10 +7,19 @@
     <title>
         <%= title %>
     </title>
+    <link rel="stylesheet" href="/css/sign_up.css">
 </head>
 <body>
-    <h1>
-        Sign Up Page
-    </h1>
+    <div class="main">  	
+        <div class="signup">
+            <form action="/users/create" method="post">
+                <label for="chk" aria-hidden="true">Sign up</label>
+                <input type="text" name="name" placeholder="User name" required="">
+                <input type="email" name="email" placeholder="Email" required="">
+                <input type="password" name="password" placeholder="Password" required="">
+                <button type="submit">Sign up</button>
+            </form>
+        </div>
+	</div>
 </body>
 </html>
