--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -14,9 +14,10 @@
         <div class="signup">
             <form action="/users/create" method="post">
                 <label for="chk" aria-hidden="true">Sign up</label>
-                <input type="text" name="name" placeholder="User name" required="">
-                <input type="email" name="email" placeholder="Email" required="">
-                <input type="password" name="password" placeholder="Password" required="">
+                <input type="text" name="name" placeholder="User name" required>
+                <input type="email" name="email" placeholder="Email" required>
+                <input type="password" name="password" placeholder="Password" required>
+                <input type="password" name="confirm_password" placeholder=" Confirm Password" required>
                 <button type="submit">Sign up</button>
             </form>
         </div>
