--- a/assets/css/sign_in.css
+++ b/assets/css/sign_in.css
@@ -67,16 +67,7 @@ button{
 button:hover{
 	background: #6d44b8;
 }
-#singIn
-{
-	text-decoration: none;
-}
-#singIn a
-{
-	text-decoration: none;
-	color: white;
-}
-/* .login{
+.login{
 	height: 460px;
 	background: #eee;
 	border-radius: 60% / 10%;
@@ -86,7 +77,7 @@ button:hover{
 .login label{
 	color: #573b8a;
 	transform: scale(.6);
-} */
+}
 
 /* #chk:checked ~ .login{
 	transform: translateY(-500px);
