--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -19,7 +19,11 @@
                 <input type="password" name="password" placeholder="Password" required>
                 <input type="password" name="confirm_password" placeholder=" Confirm Password" required>
                 <button type="submit">Sign up</button>
+                
             </form>
+            <button type="submit" id="singIn">
+                <a href="/users/sign_in">Sing In</a>
+            </button>
         </div>
 	</div>
 </body>
