--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,15 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        <%= title %>
-    </title>
+    <title>trackMyHabbit</title>
 </head>
 <body>
-    <h1>home page</h1>
+    <nav id="nav-bar">
+        <h2>trackMyHabbit</h2>
+        <ul id="nav-bar-option">
+            <li>
+                <a href="/users/sign-in">Sign In</a>
+            </li>
+            <li>
+                <a href="/users/sign-up">Sing Up</a>
+            </li>
+            <li>
+                <a href="#footer">Contact Us</a>
+            </li>
 
-    <a href="/users/profile">Profile</a>
-    <a href="/users/sign_in">Sign In</a>
-    <a href="/users/sign_up">Sign Up</a>
+        </ul>
+    </nav>
+    <main>
+        main body
+    </main>
+
+    <footer>
+        
+    </footer>
 </body>
 </html>
