--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -12,18 +12,14 @@
 <body>
     <div class="main">  	
         <div class="signup">
+            <h3>Sing Up</h3>
             <form action="/users/create" method="post">
-                <label for="chk" aria-hidden="true">Sign up</label>
-                <input type="text" name="name" placeholder="User name" required>
+                <input type="text" name="name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Email" required>
                 <input type="password" name="password" placeholder="Password" required>
                 <input type="password" name="confirm_password" placeholder=" Confirm Password" required>
                 <button type="submit">Sign up</button>
-                
             </form>
-            <button type="submit" id="singIn">
-                <a href="/users/sign_in">Sing In</a>
-            </button>
         </div>
 	</div>
 </body>
