--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,15 +10,27 @@
     <nav id="nav-bar">
         <h2>trackMyHabbit</h2>
         <ul id="nav-bar-option">
-            <li>
-                <a href="/users/sign-in">Sign In</a>
-            </li>
-            <li>
-                <a href="/users/sign-up">Sing Up</a>
-            </li>
-            <li>
-                <a href="#footer">Contact Us</a>
-            </li>
+            <% if(!locals.user){%>
+                <li>
+                    <a href="/users/sign-in">Sign In</a>
+                </li>
+                <li>
+                    <a href="/users/sign-up">Sing Up</a>
+                </li>
+                <li>
+                    <a href="#footer">Contact Us</a>
+                </li>
+            <% } %>
+            <% if(locals.user){%>
+                
+                <li>
+                    <a href="/users/profile"> Profile </a>
+                </li>
+                <li>
+                    <a href="#footer">Contact Us</a>
+                </li>
+            <% } %>
+            
 
         </ul>
     </nav>
