setup logout for users

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,5 +10,17 @@
 </head>
 <body>
     <h1>profile page</h1>
+
+    <p><%= user.name %></p>
+    <p><%= user.email %></p>
+
+    <ul>
+        <li>
+            <a href="/">Home</a>
+        </li>
+        <li>
+            <a href="/users/destroy-session"> Sign Out</a>
+        </li>
+    </ul>
 </body>
 </html>
