--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,21 +10,23 @@
     <nav id="nav-bar">
         <h2>trackMyHabbit</h2>
         <ul id="nav-bar-option">
-            <% if(!locals.user){%>
+            <% if(locals.user){%>
+                <li>
+                    <a href="/users/profile"> Profile </a>
+                </li>
+                <li>
+                    <a href="/users/destroy-session"> Sign Out</a>
+                </li>
+                <li>
+                    <a href="#footer">Contact Us</a>
+                </li>
+            <% } else{%>
+                
                 <li>
                     <a href="/users/sign-in">Sign In</a>
                 </li>
                 <li>
                     <a href="/users/sign-up">Sing Up</a>
-                </li>
-                <li>
-                    <a href="#footer">Contact Us</a>
-                </li>
-            <% } %>
-            <% if(locals.user){%>
-                
-                <li>
-                    <a href="/users/profile"> Profile </a>
                 </li>
                 <li>
                     <a href="#footer">Contact Us</a>
