--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,6 +7,7 @@
     <title>
         <%= title %>
     </title>
+    <link rel="stylesheet" href="/css/profile.css">
 </head>
 <body>
     <h1>profile page</h1>
