setup connect-flash for flash message to give user better experience

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,6 +36,11 @@
 
         </ul>
     </nav>
+    <% if(flash.success && flash.success.length >0) {%>
+        <h5>
+            <% flash.success %>
+        </h5>
+    <% } %>
     <main>
         main body
     </main>
