setup google authentication

--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -21,6 +21,9 @@
                 <input type="password" name="password" id="" placeholder="password" required>
                 <button type="submit">Sign In</button>
             </form>
+            <button>
+                <a href="/users/auth/google">Sign In Using Gmail</a>
+            </button>
         </div>
     </main>
 </body>
