--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -20,6 +20,9 @@
                 <input type="password" name="confirm_password" placeholder=" Confirm Password" required>
                 <button type="submit">Sign up</button>
             </form>
+            <button>
+                <a href="/users/auth/google">Sign Up Using Gmail</a>
+            </button>
         </div>
 	</div>
 </body>
