layouts and partials added

--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,19 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>
         <%= title %>
     </title>
     <link rel="stylesheet" href="/css/sign_in.css">
-</head>
-<body>
+
     <main>
         <div>
             <h1>Log In</h1>
-            <p>register yourself?<a href="/users/create">Sign Up</a></p>
+            <p>register yourself?
+                <a href="/users/sign-up">Sign Up</a>
+            </p>
         </div>
         <div class="signin">
             <form action="/users/create-session" method="post">
@@ -26,5 +22,3 @@
             </button>
         </div>
     </main>
-</body>
-</html>
