--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,6 +7,9 @@
         <ul id="nav-bar-option">
             <% if(locals.user){%>
                 <li>
+                    <a href="/habbit/dashboard"> Dashboard </a>
+                </li>
+                <li>
                     <a href="/users/profile"> Profile </a>
                 </li>
                 <li>
