--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,15 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
-    <link rel="stylesheet" href="/css/layouts.css">
+    <!-- font awesome cdn link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+    <link rel="stylesheet" href="/css/layout.css">
     <%- style %>
 </head>
 <body>
-    <h1>
-        layout file
-    </h1>
-    <%- body %>
+    
+    <header>
+        <%- include('_header'); %>
+    </header>
+
+    <main>
+        <%- body %>
+    </main>
+
+    <footer>
+        <%- include('_footer'); %>
+    </footer>
 
     <%- script %>
+
 </body>
 </html>
