--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,4 +1,7 @@
 <link rel="stylesheet" href="/css/footer.css">
-<dic id="footer-container">
-    <p>all copyrights are reserved by trackMyHabbit</p>
-</div>
+
+<footer>
+    <div id="footer-container">
+        <p>all &copy;copyrights are reserved by trackMyHabbit</p>
+    </div>
+</footer>
