--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,4 +1,6 @@
 <link rel="stylesheet" href="/css/header.css">
-<div id="header-container">
-    <h1>trackMyHabbit</h1>
-</div>
+<header>
+    <div id="header-container">
+        <h1>trackMyHabbit</h1>
+    </div>
+</header>
