--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,17 +13,15 @@
 </head>
 <body>
     
-    <header>
-        <%- include('_header'); %>
-    </header>
-
+    <!--  -->
+    <%- include('_header'); %>
+    
     <main>
         <%- body %>
     </main>
 
-    <footer>
-        <%- include('_footer'); %>
-    </footer>
+    <!-- footer style -->
+    <%- include('_footer'); %>
 
     <%- script %>
 
