--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -21,6 +21,8 @@
         </button>
     </div>
     <hr>
-    <p class="joinNow"><a href="/users/sign-up">New to trackMyHabbit? Join Now</a></p>
+    <p class="joinNow">
+        <a href="/users/sign-up">New to trackMyHabbit? Join Now</a>
+    </p>
 </div>
 
