--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -1,21 +1,32 @@
 
-    <title>
-        <%= title %>
-    </title>
-    <link rel="stylesheet" href="/css/sign_up.css">
+<title>
+    <%= title %>
+</title>
+<link rel="stylesheet" href="/css/sign_up.css">
 
-    <div class="main">  	
-        <div class="signup">
-            <h3>Sing Up</h3>
-            <form action="/users/create" method="post">
-                <input type="text" name="name" placeholder="Your Name" required>
-                <input type="email" name="email" placeholder="Email" required>
-                <input type="password" name="password" placeholder="Password" required>
-                <input type="password" name="confirm_password" placeholder=" Confirm Password" required>
-                <button type="submit">Sign up</button>
-            </form>
-            <button>
-                <a href="/users/auth/google">Sign Up Using Gmail</a>
-            </button>
-        </div>
-	</div>
+<div class="container">  	
+    <h2>Sing Up</h2>
+    <hr>
+    <div class="signup">
+        <form action="/users/create" method="post">
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" id="" placeholder="email id" required>
+            <input type="password" name="password" placeholder="Password" required>
+            <input type="password" name="confirm_password" placeholder=" Confirm Password" required>
+
+            <button type="submit">Sign up</button>
+        </form>
+    </div>
+    <p class="or"> OR </p> 
+    <div class="social-container">
+        <button class="social">
+            <a href="/users/auth/google"></i>Continue With Google</a>
+        </button>
+    </div>
+    <hr>
+    <p class="signIn">
+        <a href="/users/sign-in">Already User? Sign In</a>
+    </p>
+
+</div>
+
