--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,11 +1,10 @@
 #footer-container {
-  margin-bottom: 0px;
+  border-top: 1px solid white;
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
 #footer-container p {
-  font-size: 1rem;
+  font-size: 1.5rem;
   color: white;
 }
