--- a/assets/css/sign_up.css
+++ b/assets/css/sign_up.css
@@ -1,4 +1,4 @@
-#container {
+.container {
   position: absolute;
   top: 15%;
   left: 38%;
@@ -9,36 +9,36 @@
   box-shadow: 0px 3px 5px 0px #a8a6a6, 0px 3px 20px 0px #a8a6a6;
 }
 
-#container .signin form {
+.container .signup form {
   display: flex;
   flex-direction: column;
 }
 
-#container .signin form input, #container .signin form button {
+.container .signup form input, .container .signup form button {
   font-size: 1.1rem;
   padding: 0.5rem;
   margin: 1rem;
   border-radius: 50px;
 }
 
-#container .signin form button {
+.container .signup form button {
   background-color: #5074df;
   color: white;
 }
 
-#container .signin form button:hover {
+.container .signup form button:hover {
   background-color: #2052eb;
 }
 
-#container .or {
+.container .or {
   margin: -2px;
 }
 
-#container #social-container {
+.container .social-container {
   margin: 0.5rem;
 }
 
-#container #social-container .social {
+.container .social-container .social {
   font-size: 1.1rem;
   padding: 0.5rem;
   border-radius: 50px;
@@ -47,20 +47,20 @@
   background-color: #f23f3f;
 }
 
-#container #social-container .social a {
+.container .social-container .social a {
   text-decoration: none;
   color: white;
 }
 
-#container #social-container .social:hover {
+.container .social-container .social:hover {
   background-color: red;
 }
 
-#container .joinNow a {
+.container .signIn a {
   text-decoration: none;
   color: white;
 }
 
-#container .joinNow:hover {
+.container .signIn:hover {
   text-decoration: underline;
 }
