--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -1,12 +1,12 @@
 #footer-container
 {   
-    margin-bottom: 0px;
+    border-top: 1px solid rgb(255, 255, 255);
     display: flex;
-    justify-content: center;
+    // justify-content: center;
     align-items: center;
     p
     {
-        font-size: 1rem;
+        font-size: 1.5rem;
         color: white;
     }
 }
