--- a/assets/scss/sign_up.scss
+++ b/assets/scss/sign_up.scss
@@ -1,4 +1,4 @@
-#container
+.container
 {
     position: absolute;
     top: 15%;
@@ -8,7 +8,7 @@
     padding: 1rem;
     text-align: center;
     box-shadow: 0px 3px 5px 0px rgb(168, 166, 166), 0px 3px 20px 0px rgb(168, 166, 166);
-    .signin
+    .signup
     {
         form
         {
@@ -43,7 +43,7 @@
     {
         margin: -2px;
     }
-    #social-container
+    .social-container
     {
         margin: 0.5rem;
         .social
@@ -65,14 +65,14 @@
             background-color: red;
         }
     }
-    .joinNow
+    .signIn
     {
         a{
             text-decoration: none;
             color: white;
         }
     }
-    .joinNow:hover
+    .signIn:hover
     {
         text-decoration: underline;
     }
