--- a/assets/scss/contact.scss
+++ b/assets/scss/contact.scss
@@ -40,7 +40,7 @@ main
 
         }
 
-        #user-details
+        #contact-details
         {
             padding: 0.5rem;
             height: 100vh;
