--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,9 +16,8 @@
     <!--  -->
     <%- include('_header'); %>
     
-    <main>
-        <%- body %>
-    </main>
+    <!-- main -->
+    <%- body %>
 
     <!-- footer style -->
     <%- include('_footer'); %>
