--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,8 +1,8 @@
-main {
+#nav-bar {
   margin: 0px;
 }
 
-main #container {
+#nav-bar .container {
   height: 100vh;
   width: 100vw;
   top: 20px;
@@ -11,36 +11,35 @@ main #container {
   margin: 0px;
 }
 
-main #container #sidebar {
+#nav-bar .container #sidebar {
   height: 100vh;
   width: 20%;
   border-right: 2px solid #bebdbd;
 }
 
-main #container #sidebar ul {
+#nav-bar .container #sidebar ul {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   margin: 0px;
 }
 
-main #container #sidebar ul li {
+#nav-bar .container #sidebar ul li {
   list-style: none;
   font-size: 1.5rem;
   padding: 0.3rem;
 }
 
-main #container #sidebar ul li a {
+#nav-bar .container #sidebar ul li a {
   color: white;
   text-decoration: none;
 }
 
-main #container #sidebar ul li:hover {
+#nav-bar .container #sidebar ul li:hover {
   text-decoration: underline;
 }
 
-main #container #user-details {
-  padding: 0.5rem;
+#nav-bar .container #homepage-content {
   height: 100vh;
   width: 60%;
   border-right: 2px solid #bebdbd;
