--- a/assets/scss/dashboard.scss
+++ b/assets/scss/dashboard.scss
@@ -1,9 +1,6 @@
-body
+main
 {
     margin: 0px;
-    h1{
-        text-align: center;
-    }
     #container
     { 
         height: 100vh;
@@ -16,7 +13,6 @@ body
         {
             height: 100vh;
             width: 20%;
-            background-color: azure;
             border-right: 2px solid rgb(190, 189, 189);
 
             ul
@@ -30,12 +26,15 @@ body
                 {
                     list-style: none;
                     font-size: 1.5rem;
-                    padding: 0.2re;
-
+                    padding: 0.3rem;
                     a
                     {
+                        color: white;
                         text-decoration: none;
                     }
+                }
+                li:hover{
+                    text-decoration: underline;
                 }
             }
 
@@ -43,9 +42,9 @@ body
 
         #habbit-list
         {
+            padding: 0.5rem;
             height: 100vh;
             width: 60%;
-            background-color: rgb(255, 255, 255);
             border-right: 2px solid rgb(190, 189, 189);
         }
     
