--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,24 +1,28 @@
 <link rel="stylesheet" href="/css/dashboard.css">
-<h1>
-    trackMyHabbit
-</h1>
-<div id="container">
-    <div id="sidebar">
-        <h1> User Dashboard</h1>
-        <ul>
-            <li>
-                <a href="/"> Home </a>
-            </li>
-            <li>
-                <a href="/users/profile"> Profile </a>
-            </li>
-            <li>
-                <a href="/users/sign-out"> Sign Out </a>
-            </li>
-        </ul>
+<main>
+    <div id="container">
+        <div id="sidebar">
+            <ul>
+                <li>
+                    <a href="/"> Home </a>
+                </li>
+                <li>
+                    <a href="/habbit/dashboard"> Dashboard </a>
+                </li>
+                <li>
+                    <a href="/users/profile"> Profile </a>
+                </li>
+                <li>
+                    <a href="/contact"> Contact Us </a>
+                </li>
+                <li>
+                    <a href="/users/sign-out"> Sign Out </a>
+                </li>
+            </ul>
+        </div>
+        
+        <div id="habbit-list">
+        
+        </div>
     </div>
-    
-    <div id="habbit-list">
-    
-    </div>
-</div>
+</main>
