--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,36 +1,59 @@
 <!-- noty js cdn -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css" integrity="sha512-0p3K0H3S6Q4bEWZ/WmC94Tgit2ular2/n0ESdfEX8l172YyQj8re1Wu9s/HT9T/T2osUw5Gx/6pAZNk3UKbESw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js" integrity="sha512-lOrm9FgT1LKOJRUXF3tp6QaMorJftUjowOWiDcG5GFZ/q7ukof19V0HKx/GWzXCdt9zYju3/KhBNdCLzK8b90Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<link rel="stylesheet" href="/css/home.css">
 <main id="nav-bar">
-    <ul id="nav-bar-option">
-        <% if(locals.user){%>
-            <li>
-                <a href="/habbit/dashboard"> Dashboard </a>
-            </li>
-            <li>
-                <a href="/users/profile"> Profile </a>
-            </li>
-            <li>
-                <a href="/users/destroy-session"> Sign Out</a>
-            </li>
-            <li>
-                <a href="#footer">Contact Us</a>
-            </li>
-        <% } else{%>
-            
-            <li>
-                <a href="/users/sign-in">Sign In</a>
-            </li>
-            <li>
-                <a href="/users/sign-up">Sing Up</a>
-            </li>
-            <li>
-                <a href="#footer">Contact Us</a>
-            </li>
-        <% } %>
-        
+    <div class="container">
+        <div id="sidebar">
+            <ul>
+                <% if(locals.user){%>
+                    <li>
+                        <a href="/"> Home </a>
+                    </li>
+                    <li>
+                        <a href="/habbit/dashboard"> Dashboard </a>
+                    </li>
+                    <li>
+                        <a href="/users/profile"> Profile </a>
+                    </li>
+                    <li>
+                        <a href="/contact"> Contact Us </a>
+                    </li>
+                    <li>
+                        <a href="/users/destroy-session"> Sign Out</a>
+                    </li>
+                <% } else{%>
+                
+                    <li>
+                        <a href="/users/sign-in">Sign In</a>
+                    </li>
+                    <li>
+                        <a href="/users/sign-up">Sing Up</a>
+                    </li>
+                    <li>
+                        <a href="/contact"> Contact Us </a>
+                    </li>
+                <% } %>
+            </ul>
+        </div>
 
-    </ul>
+        <!-- if user is not login then show this image with some texts about habbit  -->
+        <div id="homepage-content">
+            <% if(!locals.user) {%>
+                <div>
+                    <img src="images/homeImage.png" alt="home_image">
+
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa maiores quam doloribus tempore! Provident ipsam ipsa, optio unde tempora praesentium. Odio magnam adipisci iusto quos vitae error itaque non delectus?
+                    Similique quaerat repudiandae possimus ullam quas suscipit enim natus, tempore nostrum inventore deserunt optio magni amet eius sunt eveniet, quisquam doloremque excepturi aut temporibus officiis tempora? Temporibus atque mollitia hic.
+                    Animi, culpa iusto itaque, distinctio est delectus deserunt modi vitae omnis molestiae harum, repudiandae laborum consectetur? Provident, iste amet ratione blanditiis, voluptas delectus temporibus iure, libero similique rerum possimus vel.</p>
+                </div>
+            <% }%>
+        </div>
+
+        <div>
+
+        </div>
+    </div>
 </main>
 
 <script>
