--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,7 +1,5 @@
-<link rel="stylesheet" href="/css/footer.css">
-
 <footer>
-    <div id="footer-container">
+    <div class="footer-container">
         <p>all &copy;copyrights are reserved by trackMyHabbit</p>
     </div>
 </footer>
