--- a/assets/scss/dashboard.scss
+++ b/assets/scss/dashboard.scss
@@ -3,15 +3,14 @@ main
     margin: 0px;
     #container
     { 
-        height: 100vh;
-        width: 100vw;
+        // height: 100vh;
         top: 20px;
         display: flex;
         flex-direction: row;
         margin: 0px;
         #sidebar
         {
-            height: 100vh;
+            // height: 100vh;
             width: 20%;
             border-right: 2px solid rgb(190, 189, 189);
 
@@ -43,7 +42,7 @@ main
         #habbit-list
         {
             padding: 0.5rem;
-            height: 100vh;
+            // height: 100vh;
             width: 60%;
             border-right: 2px solid rgb(190, 189, 189);
         }
