--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -1,12 +1,14 @@
-#footer-container
+footer
 {   
-    border-top: 1px solid rgb(255, 255, 255);
-    display: flex;
-    // justify-content: center;
-    align-items: center;
-    p
+    .footer-container
     {
-        font-size: 1.5rem;
-        color: white;
+        border-top: 1px solid rgb(255, 255, 255);
+        display: flex;
+        align-items: center;
+        p
+        {
+            font-size: 1.5rem;
+            color: white;
+        }
     }
 }
