--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -4,7 +4,7 @@
     margin: 0px;
     .container
     { 
-        height: 100vh;
+        // height: 100vh;
         width: 100vw;
         top: 20px;
         display: flex;
@@ -12,7 +12,7 @@
         margin: 0px;
         #sidebar
         {
-            height: 100vh;
+            // height: 100vh;
             width: 20%;
             border-right: 2px solid rgb(190, 189, 189);
 
@@ -43,7 +43,7 @@
 
         #homepage-content
         {
-            height: 100vh;
+            // height: 100vh;
             width: 60%;
             border-right: 2px solid rgb(190, 189, 189);
         }
