--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,15 +1,10 @@
-html
+body
 {
-    height: 100%;
-    body
-    {
-        margin: 0px;
-        height: 100%;
-        background-color: rgb(23, 23, 23);
-        color: white;
-        main
-        {
-            min-height: 40rem;
-        }
-    }
+    margin: 0px;
+    background-color: rgb(23, 23, 23);
+    color: white;
+
+    display: flex;
+    flex-direction: column;
+    
 }
