--- a/assets/scss/sign_up.scss
+++ b/assets/scss/sign_up.scss
@@ -1,79 +1,126 @@
-.container
+main
 {
-    position: absolute;
-    top: 15%;
-    left: 38%;
-    width: 25vw;
-    font-size: 1.5rem;
-    padding: 1rem;
-    text-align: center;
-    box-shadow: 0px 3px 5px 0px rgb(168, 166, 166), 0px 3px 20px 0px rgb(168, 166, 166);
-    .signup
-    {
-        form
+    margin-bottom: 10px;
+    #container
+    { 
+        // height: 100vh;
+        top: 20px;
+        display: flex;
+        flex-direction: row;
+        margin: 0px;
+        #sidebar
+        {
+            // height: 100vh;
+            width: 20%;
+            border-right: 2px solid rgb(190, 189, 189);
+
+            ul
+            {
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                margin: 0px;
+
+                li
+                {
+                    list-style: none;
+                    font-size: 1.5rem;
+                    padding: 0.3rem;
+                    a
+                    {
+                        color: white;
+                        text-decoration: none;
+                    }
+                }
+                li:hover{
+                    text-decoration: underline;
+                }
+            }
+
+        }
+
+        #main-content-container
         {
             display: flex;
-            flex-direction: column;
-
-            input, button
-            {
-                font-size: 1.1rem;
-                padding: 0.5rem;
-                margin: 1rem;
-                border-radius: 50px; 
-            }
-
-            button{
-                // font-size: 1.5rem;
-                // padding: 0.7rem;
-                // margin: 1rem;
-                // border-radius: 50px;
-                background-color: rgb(80, 116, 223);
-                color: white;
-            }
-            button:hover
-            {
-                background-color: rgb(32, 82, 235);
-            }
-
-        }
-    }
-
-    .or
-    {
-        margin: -2px;
-    }
-    .social-container
-    {
-        margin: 0.5rem;
-        .social
-        {
-            font-size: 1.1rem;
+            justify-content: center;
+            align-items: center;
             padding: 0.5rem;
-            border-radius: 50px;
-            width: 95%;
-            margin: 1rem 0rem;
-            background-color: rgb(242, 63, 63);
-            a
+            width: 60%;
+            border-right: 2px solid rgb(190, 189, 189);
+            
+            .signup-form-container
             {
-                text-decoration: none;
-                color:white;
+                width: 25vw;
+                font-size: 1.5rem;
+                padding: 1rem;
+                text-align: center;
+                box-shadow: 0px 3px 5px 0px rgb(168, 166, 166), 0px 3px 20px 0px rgb(168, 166, 166);
+                .signup
+                {
+                    form
+                    {
+                        display: flex;
+                        flex-direction: column;
+
+                        input, button
+                        {
+                            font-size: 1.1rem;
+                            padding: 0.5rem;
+                            margin: 1rem;
+                            border-radius: 50px; 
+                        }
+
+                        button{
+                            background-color: rgb(80, 116, 223);
+                            color: white;
+                        }
+                        button:hover
+                        {
+                            background-color: rgb(32, 82, 235);
+                        }
+
+                    }
+                }
+
+                .or
+                {
+                    margin: -2px;
+                }
+                .social-container
+                {
+                    margin: 0.5rem;
+                    .social
+                    {
+                        font-size: 1.1rem;
+                        padding: 0.5rem;
+                        border-radius: 50px;
+                        width: 95%;
+                        margin: 1rem 0rem;
+                        background-color: rgb(242, 63, 63);
+                        a
+                        {
+                            text-decoration: none;
+                            color:white;
+                        }
+                    }
+
+                    .social:hover{
+                        background-color: red;
+                    }
+                }
+                .singIn
+                {
+                    a{
+                        text-decoration: none;
+                        color: white;
+                    }
+                }
+                .singIn:hover
+                {
+                    text-decoration: underline;
+                }
             }
         }
-
-        .social:hover{
-            background-color: red;
-        }
-    }
-    .signIn
-    {
-        a{
-            text-decoration: none;
-            color: white;
-        }
-    }
-    .signIn:hover
-    {
-        text-decoration: underline;
+    
     }
 }
