--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -1,47 +1,43 @@
-body {
+main {
   margin: 0px;
 }
 
-body #container {
-  height: 100vh;
-  width: 100vw;
+main #container {
   top: 20px;
   display: flex;
   flex-direction: row;
   margin: 0px;
 }
 
-body #container #sidebar {
-  height: 100vh;
+main #container #sidebar {
   width: 20%;
   border-right: 2px solid #bebdbd;
 }
 
-body #container #sidebar ul {
+main #container #sidebar ul {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   margin: 0px;
 }
 
-body #container #sidebar ul li {
+main #container #sidebar ul li {
   list-style: none;
   font-size: 1.5rem;
   padding: 0.3rem;
 }
 
-body #container #sidebar ul li a {
+main #container #sidebar ul li a {
   color: white;
   text-decoration: none;
 }
 
-body #container #sidebar ul li:hover {
+main #container #sidebar ul li:hover {
   text-decoration: underline;
 }
 
-body #container #habbit-list {
+main #container #habbit-list {
   padding: 0.5rem;
-  height: 100vh;
   width: 60%;
   border-right: 2px solid #bebdbd;
 }
