--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,20 +39,17 @@
 
         <!-- if user is not login then show this image with some texts about habbit  -->
         <div id="homepage-content">
-            <% if(!locals.user) {%>
-                <div>
-                    <img src="images/homeImage.png" alt="home_image">
+            <div>
+                <img src="images/homeImage.png" alt="home_image">
 
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa maiores quam doloribus tempore! Provident ipsam ipsa, optio unde tempora praesentium. Odio magnam adipisci iusto quos vitae error itaque non delectus?
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa maiores quam doloribus tempore! Provident ipsam ipsa, optio unde tempora praesentium. Odio magnam adipisci iusto quos vitae error itaque non delectus?
                     Similique quaerat repudiandae possimus ullam quas suscipit enim natus, tempore nostrum inventore deserunt optio magni amet eius sunt eveniet, quisquam doloremque excepturi aut temporibus officiis tempora? Temporibus atque mollitia hic.
-                    Animi, culpa iusto itaque, distinctio est delectus deserunt modi vitae omnis molestiae harum, repudiandae laborum consectetur? Provident, iste amet ratione blanditiis, voluptas delectus temporibus iure, libero similique rerum possimus vel.</p>
-                </div>
-            <% }%>
+                    Animi, culpa iusto itaque, distinctio est delectus deserunt modi vitae omnis molestiae harum, repudiandae laborum consectetur? Provident, iste amet ratione blanditiis, voluptas delectus temporibus iure, libero similique rerum possimus vel.
+                </p>
+            </div>
         </div>
 
-        <div>
-
-        </div>
     </div>
 </main>
 
