--- a/assets/scss/dashboard.scss
+++ b/assets/scss/dashboard.scss
@@ -1,16 +1,17 @@
 main
 {
     margin: 0px;
+    // min-height: 40rem;
     #container
     { 
-        // height: 100vh;
+        height: 100vh;
         top: 20px;
         display: flex;
         flex-direction: row;
         margin: 0px;
         #sidebar
         {
-            // height: 100vh;
+            height: 100vh;
             width: 20%;
             border-right: 2px solid rgb(190, 189, 189);
 
@@ -39,12 +40,67 @@ main
 
         }
 
-        #habbit-list
+        #habbit-container
         {
             padding: 0.5rem;
-            // height: 100vh;
+            height: 100vh;
             width: 60%;
             border-right: 2px solid rgb(190, 189, 189);
+
+            .add-new-habbit
+            {
+                float: right;
+                margin-left: 1rem;
+                font-size: 1.2rem;
+                padding: 0.5rem;
+                border-radius: 50px;
+                box-shadow: 0px 4px 6px 0px rgb(223, 221, 221), 0px 6px 20px 0px rgb(223, 221, 221);
+            }
+
+            .new-habbit-form
+            {
+                top: 50%;
+                left: 50%;
+                position: fixed;
+                transform: translate(-50%, -50%);
+                border-radius: 1rem;
+                padding: 2rem;
+                border: 2px solid white;
+                width: 30%;
+                display: none;
+
+                .close-btn
+                {
+                    float: right;
+                    margin: -1.5rem;
+                    background-color: red;
+                    color: white;
+                }
+                input
+                {
+                    width: 90%;
+                    display: block;
+                    padding: 0.6rem;
+                    font-size: 1.5rem;
+                    margin: 0.2rem 0;
+                }
+                .time-option
+                {   
+                    width: 95%; 
+                    display: block;
+                    padding: 0.6rem;
+                    font-size: 1.5rem;
+                }
+                .add-btn
+                {
+                    margin-top: 2rem !important;
+                    width: 95%;
+                }
+                .add-btn:hover
+                {
+                    background-color: rgb(206, 203, 203);
+                }
+            }
         }
     
     }
