--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,8 +1,8 @@
 body
 {
     margin: 0px;
-    background-color: rgb(23, 23, 23);
-    color: white;
+    background-color: rgb(83, 82, 82);
+    color: rgb(255, 255, 255);
 
     display: flex;
     flex-direction: column;
